--- a/Web pages/Gallery.html
+++ b/Web pages/Gallery.html
@@ -67,7 +67,7 @@
                 All-Star Superman
             </h2>
 
-            <img onclick="Add(this)" src="IPGSUM1-comic-book-website\IPG resources\All-star superman.jpg" alt="All-star superman" />
+            <img onclick="Add(this)" src="..\IPG Resources\All-star superman.jpg" alt="All-star superman" />
 
             <p>
                 While, for the most part, we avoided limited series
