--- a/Web pages/Gallery.html
+++ b/Web pages/Gallery.html
@@ -605,6 +605,6 @@
     </footer>
 
     <!-- Linking the script file to the html file  -->
-    <script src="D:\OneDrive - CTU Career\Modules\IPG511\SUM1\Comic book website\Scripts\Gallery.js" type="text/javascript"></script>
+    <script src="https://animus20000809.github.io/IPGSUM1-comic-book-store-website/Scripts/Gallery.js" type="text/javascript"></script>
 </body>
 </html>
