--- a/Web pages/Gallery.html
+++ b/Web pages/Gallery.html
@@ -91,7 +91,7 @@
                 Astonishing X-Men
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG resources\X-men.jpg" alt="X-men" />
+            <img onclick="Add(this)" src="..\IPG Resources\X-men.jpg" alt="X-men" />
 
             <p>
                 Joss Whedon’s legend was already secure when Marvel Comics
