--- a/Web pages/Home.html
+++ b/Web pages/Home.html
@@ -34,7 +34,7 @@
         </article>
 
         <article>
-            <img src="..\IPG resources\All-star superman.jpg" />
+            <img src="..\IPG Resources\All-star superman.jpg" />
             <div class="desc">All-Star Superman</div>
         </article>
 
