Chaning script and css links

--- a/Contact.html
+++ b/Contact.html
@@ -6,9 +6,9 @@
     <!--Main title of page-->
     <title>Contact</title>
     <!-- Linking the stylesheet file to the html file -->
-    <link href="..\Style.css" rel="stylesheet" type="text/css" />
+    <link href="Style.css" rel="stylesheet" type="text/css" />
     <!-- Linking the script file to the html file  -->
-    <script src="..\Scripts\Contact page.js" type="text/javascript"></script>
+    <script src="Contact page.js" type="text/javascript"></script>
 </head>
 <body>
 
