--- a/Gallery.html
+++ b/Gallery.html
@@ -6,7 +6,7 @@
     <!--Main title of page-->
     <title>Gallery</title>
     <!-- Linking the stylesheet file to the html file -->
-    <link href="..\Style.css" rel="stylesheet" type="text/css" />
+    <link href="Style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
@@ -605,6 +605,6 @@
     </footer>
 
     <!-- Linking the script file to the html file  -->
-    <script src="https://animus20000809.github.io/IPGSUM1-comic-book-store-website/Scripts/Gallery.js" type="text/javascript"></script>
+    <script src="Gallery.js" type="text/javascript"></script>
 </body>
 </html>
