--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
     <!--Main title of page-->
     <title>Home</title>
     <!-- Linking the stylesheet file to the html file -->
-    <link href="..\Style.css" rel="stylesheet" type="text/css" />
+    <link href="Style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
@@ -166,6 +166,6 @@
     </footer>
 
     <!-- Linking the script file to the html file  -->
-    <script src="..\Script.js" type="text/javascript"></script> 
+    <script src="Script.js" type="text/javascript"></script> 
 </body>
 </html>
