Changing image directories

--- a/Gallery.html
+++ b/Gallery.html
@@ -48,7 +48,7 @@
             <h2>
                100 Bullets
             </h2>
-            <img onclick="Add(this)" src="..\IPG Resources\100 bullets.jpg" alt="100 bullets" />
+            <img onclick="Add(this)" src="IPG Resources\100 bullets.jpg" alt="100 bullets" />
 
             <p>
                 Brian Azzarello and Eduardo Risso crafted an epic with a
@@ -67,7 +67,7 @@
                 All-Star Superman
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\All-star superman.jpg" alt="All-star superman" />
+            <img onclick="Add(this)" src="IPG Resources\All-star superman.jpg" alt="All-star superman" />
 
             <p>
                 While, for the most part, we avoided limited series
@@ -91,7 +91,7 @@
                 Astonishing X-Men
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\X-men.jpg" alt="X-men" />
+            <img onclick="Add(this)" src="IPG Resources\X-men.jpg" alt="X-men" />
 
             <p>
                 Joss Whedon’s legend was already secure when Marvel Comics
@@ -113,7 +113,7 @@
                 The Authority
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Authority.jpg" alt="Authority" />
+            <img onclick="Add(this)" src="IPG Resources\Authority.jpg" alt="Authority" />
 
             <p>
                 Warren Ellis and Bryan Hitch created this team out of
@@ -136,7 +136,7 @@
                 Batman (New 52)
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Batman.jpg" alt="Batman" />
+            <img onclick="Add(this)" src="IPG Resources\Batman.jpg" alt="Batman" />
 
             <p>
                 While the New 52 as a whole was an experiment that not
@@ -159,7 +159,7 @@
                 Captain America, Vol. 5
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Captain America vol5.jpg" alt="Captain America" />
+            <img onclick="Add(this)" src="IPG Resources\Captain America vol5.jpg" alt="Captain America" />
 
             <p>
                 Ed Brubaker came into Marvel with a cadre of artists like
@@ -181,7 +181,7 @@
                 Daredevil, Vol. 2
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Daredevil.jpg" alt="Daredevil" />
+            <img onclick="Add(this)" src="IPG Resources\Daredevil.jpg" alt="Daredevil" />
 
             <p>
                 The Marvel Knights era of Daredevil was such a drastic
@@ -207,7 +207,7 @@
                 Fables
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Fables.jpg" alt="Fables" />
+            <img onclick="Add(this)" src="IPG Resources\Fables.jpg" alt="Fables" />
 
             <p>
                 Bill Willingham and a cadre of talented artists set out to bring
@@ -226,7 +226,7 @@
                 Green Lantern, Vol. 4
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Green lantern.jpg" alt="Green Lantern" />
+            <img onclick="Add(this)" src="IPG Resources\Green lantern.jpg" alt="Green Lantern" />
 
             <p>
                 After bringing Hal Jordan back from the dead, Geoff Johns and Carlos
@@ -249,7 +249,7 @@
                 Hellboy
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Hellboy.jpg" alt="Hellboy" />
+            <img onclick="Add(this)" src="IPG Resources\Hellboy.jpg" alt="Hellboy" />
 
             <p>
                 Mike Mignola had helped give a backstory to Rocket Raccoon and took
@@ -273,7 +273,7 @@
                 Kick-Ass
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Kick-ass.jpg" alt="Kick-Ass" />
+            <img onclick="Add(this)" src="IPG Resources\Kick-ass.jpg" alt="Kick-Ass" />
 
             <p>
                 Another Mark Millar creator-owned joint, this one hit big with both
@@ -292,7 +292,7 @@
                 Ms. Marvel
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\MS marvel.jpg" alt="MS marvel" />
+            <img onclick="Add(this)" src="IPG Resources\MS marvel.jpg" alt="MS marvel" />
 
             <p>
                 Marvel Comics editor Sana Amanat grew up without superheroes that
@@ -314,7 +314,7 @@
                 Planetary
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Planetary.jpg" alt="Planetary" />
+            <img onclick="Add(this)" src="IPG Resources\Planetary.jpg" alt="Planetary" />
 
             <p>
                 Yes, everyone loves that other deconstruction of superheroes, but
@@ -334,7 +334,7 @@
                 Preacher
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Preacher.jpg" alt="Preacher" />
+            <img onclick="Add(this)" src="IPG Resources\Preacher.jpg" alt="Preacher" />
 
             <p>
                 Dillon and Ennis were great on company-owned properties, but when
@@ -355,7 +355,7 @@
                 Promethea
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Promethea.jpg" alt="Promethea" />
+            <img onclick="Add(this)" src="IPG Resources\Promethea.jpg" alt="Promethea" />
 
             <p>
                 Considered by many to be Alan Moore’s best modern work, this story
@@ -373,7 +373,7 @@
                 The Punisher, Vol. 6
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\The punisher.jpg" alt="The Punisher" />
+            <img onclick="Add(this)" src="IPG Resources\The punisher.jpg" alt="The Punisher" />
 
             <p>
                 In our first polling of SYFY WIRE staffers, we had at least three
@@ -394,7 +394,7 @@
                 Runaways
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Runaways.jpg" alt="Runaways" />
+            <img onclick="Add(this)" src="IPG Resources\Runaways.jpg" alt="Runaways" />
 
             <p>
                 What would you do if you found out your parents were supervillains?
@@ -417,7 +417,7 @@
                 Saga
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Saga.jpg" alt="Saga" />
+            <img onclick="Add(this)" src="IPG Resources\Saga.jpg" alt="Saga" />
 
             <p>
                 Far from the only time you’ll see Brian K. Vaughan on this list, Saga
@@ -436,7 +436,7 @@
                 Starman
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Starman.jpg" alt="Starman" />
+            <img onclick="Add(this)" src="IPG Resources\Starman.jpg" alt="Starman" />
 
             <p>
                 After introducing Jack Knight in the pages of Zero Hour, James Robinson
@@ -457,7 +457,7 @@
                 Strangers in Paradise
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Strangers in paradise.jpg" alt="Strangers in paradise" />
+            <img onclick="Add(this)" src="IPG Resources\Strangers in paradise.jpg" alt="Strangers in paradise" />
 
             <p>
                 Terry Moore created Strangers in Paradise mostly out of his frustration
@@ -476,7 +476,7 @@
                 Transmetropolitan
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Transmetropolitan.jpg" alt="Transmetropolitan" />
+            <img onclick="Add(this)" src="IPG Resources\Transmetropolitan.jpg" alt="Transmetropolitan" />
 
             <p>
                 Warren Ellis and Darick Robertson’s gonzo journalist Spider Jerusalem
@@ -494,7 +494,7 @@
                 Ultimate Spider-Man
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Ultimate spider-man.jpg" alt="Ultimate spider-man" />
+            <img onclick="Add(this)" src="IPG Resources\Ultimate spider-man.jpg" alt="Ultimate spider-man" />
 
             <p>
                 In 2000, Marvel Comics wasn’t doing very well. Bill Jemas had the idea
@@ -518,7 +518,7 @@
                 The Walking Dead
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\The walking dead.jpg" alt="The walking dead" />
+            <img onclick="Add(this)" src="IPG Resources\The walking dead.jpg" alt="The walking dead" />
 
             <p>
                 It’s hard to overstate the impact The Walking Dead has had on the comic
@@ -539,7 +539,7 @@
                 Wanted
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Wanted.jpg" alt="Wanted" />
+            <img onclick="Add(this)" src="IPG Resources\Wanted.jpg" alt="Wanted" />
 
             <p>
                 Mark Millar’s first big creator-owned work put the writer on the map with
@@ -559,7 +559,7 @@
                 Y: The Last Man
             </h2>
 
-            <img onclick="Add(this)" src="..\IPG Resources\Y-the lastman.jpg" alt="Y: the last man" />
+            <img onclick="Add(this)" src="IPG Resources\Y-the lastman.jpg" alt="Y: the last man" />
 
             <p>
                 The Brian K. Vaughan joint that put him on the map, this story of Yorick,
