--- a/Home.html
+++ b/Home.html
@@ -29,127 +29,127 @@
         <h2>The most popular comics:</h2>
 
         <article>
-            <img src="..\IPG Resources\100 bullets.jpg" />
+            <img src="IPG Resources\100 bullets.jpg" />
             <div class="desc">100 Bullets</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\All-star superman.jpg" />
+            <img src="IPG Resources\All-star superman.jpg" />
             <div class="desc">All-Star Superman</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\X-men.jpg" />
+            <img src="IPG Resources\X-men.jpg" />
             <div class="desc">Astonishing X-Men</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Authority.jpg" />
+            <img src="IPG Resources\Authority.jpg" />
             <div class="desc">The Authority</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Batman.jpg" />
+            <img src="IPG Resources\Batman.jpg" />
             <div class="desc">Batman (New 52)</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Captain America vol5.jpg" />
+            <img src="IPG Resources\Captain America vol5.jpg" />
             <div class="desc">Captain America, Vol. 5</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Daredevil.jpg" />
+            <img src="IPG Resources\Daredevil.jpg" />
             <div class="desc">Daredevil, Vol. 2</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Fables.jpg" />
+            <img src="IPG Resources\Fables.jpg" />
             <div class="desc">Fables</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Green lantern.jpg" alt="Green Lantern" />
+            <img src="IPG Resources\Green lantern.jpg" alt="Green Lantern" />
             <div class="desc">Green Lantern, Vol. 4</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Hellboy.jpg" />
+            <img src="IPG Resources\Hellboy.jpg" />
             <div class="desc">Hellboy</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Kick-ass.jpg" />
+            <img src="IPG Resources\Kick-ass.jpg" />
             <div class="desc">Kick-Ass</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\MS marvel.jpg" />
+            <img src="IPG Resources\MS marvel.jpg" />
             <div class="desc">Ms. Marvel</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Planetary.jpg" />
+            <img src="IPG Resources\Planetary.jpg" />
             <div class="desc">Planetary</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Preacher.jpg" />
+            <img src="IPG Resources\Preacher.jpg" />
             <div class="desc">Preacher</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Promethea.jpg" />
+            <img src="IPG Resources\Promethea.jpg" />
             <div class="desc">Promethea</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\The punisher.jpg" />
+            <img src="IPG Resources\The punisher.jpg" />
             <div class="desc">The Punisher, Vol. 6</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Runaways.jpg" />
+            <img src="IPG Resources\Runaways.jpg" />
             <div class="desc">Runaways</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Saga.jpg" />
+            <img src="IPG Resources\Saga.jpg" />
             <div class="desc">Saga</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Starman.jpg" />
+            <img src="IPG Resources\Starman.jpg" />
             <div class="desc">Starman</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Strangers in paradise.jpg" />
+            <img src="IPG Resources\Strangers in paradise.jpg" />
             <div class="desc">Strangers in Paradise</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Transmetropolitan.jpg" />
+            <img src="IPG Resources\Transmetropolitan.jpg" />
             <div class="desc">Transmetropolitan</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Ultimate spider-man.jpg" />
+            <img src="IPG Resources\Ultimate spider-man.jpg" />
             <div class="desc">Ultimate Spider-Man</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\The walking dead.jpg" />
+            <img src="IPG Resources\The walking dead.jpg" />
             <div class="desc">The Walking Dead</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Wanted.jpg" />
+            <img src="IPG Resources\Wanted.jpg" />
             <div class="desc">Wanted</div>
         </article>
 
         <article>
-            <img src="..\IPG Resources\Y-the lastman.jpg" />
+            <img src="IPG Resources\Y-the lastman.jpg" />
             <div class="desc">Y: The Last Man</div>
         </article>
 
