--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
     <!-- Linking the stylesheet file to the html file -->
     <link href="Style.css" rel="stylesheet" type="text/css" />
     <!-- Linking the script file to the html file  -->
-    <script src="Contact page.js" type="text/javascript"></script>
+    <script src="Contact_pwb.js" type="text/javascript"></script>
 </head>
 <body>
 
