--- a/Gallery.html
+++ b/Gallery.html
@@ -23,7 +23,6 @@
         <!-- End of navigational bar -->
     </header>
     <!-- End of header -->
-
     <!-- Gallery section with each comic article -->
     <section id="Gallery">
         <p>
@@ -46,7 +45,7 @@
 
         <article>
             <h2>
-               100 Bullets
+                100 Bullets
             </h2>
             <img onclick="Add(this)" src="IPG Resources\100 bullets.jpg" alt="100 bullets" />
 
@@ -582,7 +581,7 @@
 
         <ul></ul>
 
-        <!-- AddToAny BEGIN -->
+        <!-- Social media buttons BEGIN -->
         <div id="share" class="a2a_kit a2a_kit_size_32 a2a_default_style">
             <a class="a2a_dd" href="https://www.w3schools.com/jsref/prop_node_previoussibling.asp"></a>
             <a class="a2a_button_facebook"></a>
@@ -590,7 +589,7 @@
             <a class="a2a_button_email"></a>
         </div>
         <script async src="https://static.addtoany.com/menu/page.js"></script>
-        <!-- AddToAny END -->
+        <!-- Social media buttons END -->
 
     </section>
 
