--- a/Home.html
+++ b/Home.html
@@ -26,132 +26,30 @@
 
     <section id="Home-img-grd">
 
-        <h2>The most popular comics:</h2>
-
-        <article>
-            <img src="IPG Resources\100 bullets.jpg" />
-            <div class="desc">100 Bullets</div>
-        </article>
+        <h1>
+            The fanatics
+        </h1>
 
         <article>
             <img src="IPG Resources\All-star superman.jpg" />
             <div class="desc">All-Star Superman</div>
         </article>
 
-        <article>
-            <img src="IPG Resources\X-men.jpg" />
-            <div class="desc">Astonishing X-Men</div>
-        </article>
+        <h2>
+            About us:
+        </h2>
 
-        <article>
-            <img src="IPG Resources\Authority.jpg" />
-            <div class="desc">The Authority</div>
-        </article>
+        <p>We were initially a group of people with similar interests and we thought to ourselves: "What can we do with all of this potential?
+        How do we put our skills to good use?". That is when we thought about bringing out intellectual minds together creating this website 
+        for all who also loves comic books. Whether you are an old fan or a newcomer, this site caters for every person, big and small! </p>
 
-        <article>
-            <img src="IPG Resources\Batman.jpg" />
-            <div class="desc">Batman (New 52)</div>
-        </article>
+        <h2>
+            Our aim:
+        </h2>
 
-        <article>
-            <img src="IPG Resources\Captain America vol5.jpg" />
-            <div class="desc">Captain America, Vol. 5</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Daredevil.jpg" />
-            <div class="desc">Daredevil, Vol. 2</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Fables.jpg" />
-            <div class="desc">Fables</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Green lantern.jpg" alt="Green Lantern" />
-            <div class="desc">Green Lantern, Vol. 4</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Hellboy.jpg" />
-            <div class="desc">Hellboy</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Kick-ass.jpg" />
-            <div class="desc">Kick-Ass</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\MS marvel.jpg" />
-            <div class="desc">Ms. Marvel</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Planetary.jpg" />
-            <div class="desc">Planetary</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Preacher.jpg" />
-            <div class="desc">Preacher</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Promethea.jpg" />
-            <div class="desc">Promethea</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\The punisher.jpg" />
-            <div class="desc">The Punisher, Vol. 6</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Runaways.jpg" />
-            <div class="desc">Runaways</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Saga.jpg" />
-            <div class="desc">Saga</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Starman.jpg" />
-            <div class="desc">Starman</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Strangers in paradise.jpg" />
-            <div class="desc">Strangers in Paradise</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Transmetropolitan.jpg" />
-            <div class="desc">Transmetropolitan</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Ultimate spider-man.jpg" />
-            <div class="desc">Ultimate Spider-Man</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\The walking dead.jpg" />
-            <div class="desc">The Walking Dead</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Wanted.jpg" />
-            <div class="desc">Wanted</div>
-        </article>
-
-        <article>
-            <img src="IPG Resources\Y-the lastman.jpg" />
-            <div class="desc">Y: The Last Man</div>
-        </article>
+        <p>Our aim is to hopefully successfully share our love for these comics so that everybody can experience what we have experience so far 
+        by giving out our opinion for some of the best comic books out their so you don't have to! You can see our gallery of comics on the gallery
+        page or you can click<a href="Gallery.html">here</a>to be directed to the page. Happy comic-ing!</p>
 
     </section>
 
